added game, removed privacy

--- a/2dAimTraining/Views/Home/Index.cshtml
+++ b/2dAimTraining/Views/Home/Index.cshtml
@@ -10,13 +10,8 @@
 }
 
 <div class="text-center">
-    <script src="p5/p5.js"></script>
-    <script src="p5/p5.dom.js"></script>
-    <script src="p5/p5.sound.js"></script>
-    <script src="AimTrainerGame/Target.js" type="text/javascript"></script>
-    <script src="AimTrainerGame/Button.js" type="text/javascript"></script>
-    <script src="AimTrainerGame/GameFunctions.js" type="text/javascript"></script>
-    <script src="AimTrainerGame/AimTrainerGame.js" type="text/javascript"></script>
-    <h1>Aim Trainer.</h1>
-    <p>this project is heavily inspire by a flash based game <a href="http://www.aimbooster.com//" target="_blank">aimbooster</a>, all visual aspects are being created using the <a href="https://p5js.org/" target="_blank">p5.js</a> library.</p>
+    <h1>projects</h1>
+    <p>
+        <a asp-area="" asp-controller="Home" asp-action="AimTrainerGame">2D Aim Trainer</a>
+    </p>
 </div>
