--- a/2dAimTraining/Views/_ViewImports.cshtml
+++ b/2dAimTraining/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using _2dAimTraining
-@using _2dAimTraining.Models
+﻿@using JonathanReardon
+@using JonathanReardon.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
