general homepage updates

--- a/JonathanReardon/Views/Home/Index.cshtml
+++ b/JonathanReardon/Views/Home/Index.cshtml
@@ -56,17 +56,17 @@
                 <article class="col-6 col-12-xsmall work-item">
                     <a href="~/AimTrainerGame/AimTrainerGame.html" target="_blank" class="image fit thumb"><img src="~/images/thumbs/aimtrainer.jpg" alt="" /></a>
                     <h3>2D Aim Trainer</h3>
-                    <p>Created using p5.js a javascript library</p>
+                    <p>Created using p5.js a javascript library this project includes. includes timer, hit and miss accuracy percentage, and a local session based highscore system</p>
                     <ul class="icons">
-                        <li><a href="https://github.com/Jonty1414/JonathanReardon/tree/master/JonathanReardon/wwwroot/AimTrainerGame" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
+                        <li>view the code 🡺<a href="https://github.com/Jonty1414/JonathanReardon/tree/master/JonathanReardon/wwwroot/AimTrainerGame" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
                     </ul>
                 </article>
                 <article class="col-6 col-12-xsmall work-item">
                     <a href="https://www.twitch.tv/popout/jontycr/chat?popout=" target="_blank" class="image fit thumb"><img src="~/images/thumbs/TwitchBot.jpg" alt="" /></a>
                     <h3>Twitch Bot</h3>
-                    <p>game sate intergration for auto generating clips from the stream</p>
+                    <p>game sate intergration for interacting with chat based on ingame events e.g. multiple kills</p>
                     <ul class="icons">
-                        <li><a href="https://github.com/Jonty1414/TwitchBot" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
+                        <li>view the code 🡺<a href="https://github.com/Jonty1414/TwitchBot" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
                     </ul>
                 </article>
             </div>
