--- a/JonathanReardon/Views/Home/Index.cshtml
+++ b/JonathanReardon/Views/Home/Index.cshtml
@@ -64,7 +64,7 @@
                 <article class="col-6 col-12-xsmall work-item">
                     <a href="https://www.twitch.tv/popout/jontycr/chat?popout=" target="_blank" class="image fit thumb"><img src="~/images/thumbs/TwitchBot.jpg" alt="" /></a>
                     <h3>Twitch Bot</h3>
-                    <p>game sate intergration for interacting with chat based on ingame events e.g. multiple kills</p>
+                    <p>game sate intergration for interacting with chat based on ingame events e.g. multiple kills. this bot will only be active while streaming.</p>
                     <ul class="icons">
                         <li>view the code 🡺<a href="https://github.com/Jonty1414/TwitchBot" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
                     </ul>
