fixed aim trainer issues, updated descriptions for projects, updated images.

--- a/JonathanReardon/Views/Home/index.cshtml
+++ b/JonathanReardon/Views/Home/index.cshtml
@@ -54,19 +54,28 @@
             <h2>Projects</h2>
             <div class="row">
                 <article class="col-6 col-12-xsmall work-item">
-                    <a href="~/AimTrainerGame/AimTrainerGame.html" target="_blank" class="image fit thumb"><img src="~/images/thumbs/aimtrainer.jpg" alt="" /></a>
+                    <a href="~/AimTrainerGame/AimTrainerGame.html" target="_blank" class="image fit thumb"><img src="~/images/thumbs/AimTrainerThumb.png" alt="" /></a>
                     <h3>2D Aim Trainer</h3>
-                    <p>Created using p5.js a javascript library this project includes. includes timer, hit and miss accuracy percentage, and a local session based highscore system</p>
+                    <p>Created using p5.js a javascript library. This project includes timer, hit and miss accuracy percentage, and a local session based highscore system</p>
                     <ul class="icons">
                         <li>view the code 🡺<a href="https://github.com/Jonty1414/JonathanReardon/tree/master/JonathanReardon/wwwroot/AimTrainerGame" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
                     </ul>
                 </article>
                 <article class="col-6 col-12-xsmall work-item">
-                    <a href="https://www.twitch.tv/popout/jontycr/chat?popout=" target="_blank" class="image fit thumb"><img src="~/images/thumbs/TwitchBot.jpg" alt="" /></a>
+                    <a href="https://www.twitch.tv/popout/jontycr/chat?popout=" target="_blank" class="image fit thumb"><img src="~/images/thumbs/ChatBotThumb.png" alt="" /></a>
                     <h3>Twitch Bot</h3>
-                    <p>game sate intergration for interacting with chat based on ingame events e.g. multiple kills.</p>
+                    <p>built using c#, utilizing an open source library called TwitchLib. 
+                    Game sate intergration via a local HTTP POST endpoint using JSON as the game state structure allowing the bot to interact with Twitch chat based on ingame events e.g. multiple kills. This bot will only be active while streaming.</p>
                     <ul class="icons">
                         <li>view the code 🡺<a href="https://github.com/Jonty1414/TwitchBot" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
+                    </ul>
+                </article>
+                <article class="col-6 col-12-xsmall work-item">
+                    <a href="" class="image fit thumb"><img src="~/images/thumbs/PortfolioThumb.png" alt="" /></a>
+                    <h3>Portfolio website</h3>
+                    <p>This website was created using c# Microsoft.NETCore MVC, and deployed to microsoft azure servers via github. The front end was modified from a free template from https://html5up.net/</p>
+                    <ul class="icons">
+                        <li>view the code 🡺<a href="https://github.com/Jonty1414/JonathanReardon/tree/master/JonathanReardon/" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
                     </ul>
                 </article>
             </div>
