updated about me, updated aim trainer game over screen

--- a/JonathanReardon/Views/Home/Index.cshtml
+++ b/JonathanReardon/Views/Home/Index.cshtml
@@ -64,7 +64,7 @@
                 <article class="col-6 col-12-xsmall work-item">
                     <a href="https://www.twitch.tv/popout/jontycr/chat?popout=" target="_blank" class="image fit thumb"><img src="~/images/thumbs/ChatBotThumb.png" alt="" /></a>
                     <h3>Twitch Bot</h3>
-                    <p>built using c#, utilizing an open source library called TwitchLib. 
+                    <p>Built using c#, utilizing an open source library called TwitchLib. 
                     Game sate intergration via a local HTTP POST endpoint using JSON as the game state structure allowing the bot to interact with Twitch chat based on ingame events e.g. multiple kills. This bot will only be active while streaming.</p>
                     <ul class="icons">
                         <li>view the code 🡺<a href="https://github.com/Jonty1414/TwitchBot" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
