background update DARK MODE

--- a/JonathanReardon/Views/Home/index.cshtml
+++ b/JonathanReardon/Views/Home/index.cshtml
@@ -29,13 +29,13 @@
                 <h2><strong>About Me</strong></h2>
             </header>
             <p>
-                My goal is to establish a career in the Software Development industry, which I am very passionate about. I was
+                I am passionate about Software Development and my goal is to establish a successful career in the industry. I was
                 first introduced to C Programming and micro-processor programming during my time studying electrical
                 engineering at Ara Institute of technology.<br />
                 <br />
                 I am an eager to learn, newcomer to the industry. I have continued to develop my coding skills and extend them
                 through continual self-learning via online programming algorithm practice using codewars.com and video courses
-                though LinkedIn learning, while also learning as I went through making software projects.<br />
+                though LinkedIn learning, learning as I proceeded through software projects.<br />
                 <br />
                 During my time working in the civil construction industry as a site traffic management supervisor I developed
                 strong time management, communication, and independent work ethic skills.<br />
@@ -56,7 +56,7 @@
                 <article class="col-6 col-12-xsmall work-item">
                     <a href="~/AimTrainerGame/AimTrainerGame.html" target="_blank" class="image fit thumb"><img src="~/images/thumbs/AimTrainerThumb.png" alt="" /></a>
                     <h3>2D Aim Trainer</h3>
-                    <p>Created using p5.js a javascript library. This project includes timer, hit and miss accuracy percentage, and a local session based highscore system</p>
+                    <p>Created using p5.js a javascript library. This project includes a timer, hit and miss accuracy percentage, and a local session based highscore system</p>
                     <ul class="icons">
                         <li>view the code 🡺<a href="https://github.com/Jonty1414/JonathanReardon/tree/master/JonathanReardon/wwwroot/AimTrainerGame" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
                     </ul>
@@ -64,7 +64,7 @@
                 <article class="col-6 col-12-xsmall work-item">
                     <a href="https://www.twitch.tv/popout/jontycr/chat?popout=" target="_blank" class="image fit thumb"><img src="~/images/thumbs/ChatBotThumb.png" alt="" /></a>
                     <h3>Twitch Bot</h3>
-                    <p>built using c#, utilizing an open source library called TwitchLib. 
+                    <p>Built using c#, utilizing an open source library called TwitchLib. 
                     Game sate intergration via a local HTTP POST endpoint using JSON as the game state structure allowing the bot to interact with Twitch chat based on ingame events e.g. multiple kills. This bot will only be active while streaming.</p>
                     <ul class="icons">
                         <li>view the code 🡺<a href="https://github.com/Jonty1414/TwitchBot" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
