--- a/JonathanReardon/Views/Home/Index.cshtml
+++ b/JonathanReardon/Views/Home/Index.cshtml
@@ -33,7 +33,7 @@
                 first introduced to C Programming and micro-processor programming during my time studying electrical
                 engineering at Ara Institute of technology.<br />
                 <br />
-                I am an eager to learn, newcomer to the industry. I have continued to develop my coding skills and extend them
+                I am an eager to learn newcomer to the industry. I have continued to develop my coding skills and extend them
                 through continual self-learning via online programming algorithm practice using codewars.com and video courses
                 though LinkedIn learning, learning as I proceeded through software projects.<br />
                 <br />
