--- a/JonathanReardon/Views/Home/Index.cshtml
+++ b/JonathanReardon/Views/Home/Index.cshtml
@@ -29,19 +29,18 @@
                 <h2><strong>About Me</strong></h2>
             </header>
             <p>
-                I am passionate about Software Development and my goal is to establish a successful career in the industry. I was
-                first introduced to C Programming and micro-processor programming during my time studying electrical
-                engineering at Ara Institute of technology.<br />
+                I am very passionate about software development and it is my goal is to establish a successful career in the
+                Software Industry. I was first introduced to C Programming and micro-processor programming during my time
+                studying Electrical Engineering at Ara Institute of Technology.<br />
                 <br />
                 I am an eager to learn newcomer to the industry. I have continued to develop my coding skills and extend them
                 through continual self-learning via online programming algorithm practice using codewars.com and video courses
-                though LinkedIn learning, learning as I proceeded through software projects.<br />
+                though LinkedIn Learning, while also learning as I proceeded through various software projects.<br />
                 <br />
-                During my time working in the civil construction industry as a site traffic management supervisor I developed
-                strong time management, communication, and independent work ethic skills.<br />
-                <br />
-                As I am a quick learner, I progressed from the entry level traffic controller to the highest-level qualification in a very short period of time.
-                I have proven performance while working under pressure to hit strict deadlines for clients and while reacting to
+                During my time working in the Civil Construction Industry as a Site Traffic Management Supervisor I developed
+                strong time management, communication, and independent work ethic skills. As a quick learner I progressed from
+                the entry level traffic controller to the highest-level qualification in a very short period of time.
+                I have proven performance while working under pressure to hit strict deadlines for clients while also reacting to
                 emergency situations.
             </p>
             <ul class="actions">
