--- a/JonathanReardon/Views/Home/Index.cshtml
+++ b/JonathanReardon/Views/Home/Index.cshtml
@@ -31,17 +31,11 @@
             <p>
                 I am very passionate about software development and it is my goal is to establish a successful career in the
                 Software Industry. I was first introduced to C Programming and micro-processor programming during my time
-                studying Electrical Engineering at Ara Institute of Technology.<br />
+                studying Electrical Engineering at Ara Institute of Technology. <br />
                 <br />
                 I am an eager to learn newcomer to the industry. I have continued to develop my coding skills and extend them
                 through continual self-learning via online programming algorithm practice using codewars.com and video courses
-                though LinkedIn Learning, while also learning as I proceeded through various software projects.<br />
-                <br />
-                During my time working in the Civil Construction Industry as a Site Traffic Management Supervisor I developed
-                strong time management, communication, and independent work ethic skills. As a quick learner I progressed from
-                the entry level traffic controller to the highest-level qualification in a very short period of time.
-                I have proven performance while working under pressure to hit strict deadlines for clients while also reacting to
-                emergency situations.
+                though LinkedIn Learning, while also learning as I proceeded through various software projects.
             </p>
             <ul class="actions">
                 <li><a href="~/files/JonathanReardonCV.pdf" class="button">view full CV</a></li>
